--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,6 @@
 spring.application.name=Avante
 spring.jpa.properties.hibernate.dialect= org.hibernate.dialect.MariaDBDialect
 spring.web.resources.cache.period=0
-
 spring.profiles.active=local
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.defer-datasoure-initialization=true
